k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app
spec:
  type: ClusterIP
  selector:
    app: notes-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
